<resources>
    <string name="app_name">LoginTest</string>
    <string name="loginTv1">주문하신 상품의 계정으로 로그인 하시면\n배송 정보를 실시간으로 볼 수 있어요.</string>
    <string name="loginTv2">꽃피는 시절 비회원 주문 및 SNS 계정(페이스북/네이버등)으로 로그인 \n하여 주문하신 경우,"주문 페이지 바로가기"를 이용해 주세요</string>
    <string name="BottomTv1">아이디&amp;비밀번호 찾기</string>
    <string name="BottomTv2">자동 로그인 연결 약관</string>
    <string name="buttonLogin">로그인</string>
    <string name="termTv"><![CDATA[<font color=#f4428c>자동 로그인 약관</font>에 동의]]></string>
    <string name="id">%s 아이디</string>
    <string name="password">비밀번호</string>
    <string name="logining">로그인 중입니다..</string>
    <string name="loginsuccess">로그인 성공!</string>
    <string name="toolbartitle">로그인 (%s)</string>
</resources>