<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity" android:id="@+id/layout">
    <data>

        <import type="android.view.View"/>

        <variable
                name="main"
                type="com.test.loginTest.MainActivity"/>
    </data>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:scrollbarStyle="insideOverlay" android:fillViewport="true"
            android:clipToPadding="true">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.v7.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:id="@+id/app_toolbar" tools:ignore="MissingConstraints">
                <ImageButton
                        android:id="@+id/toolbar_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="18dp"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:padding="4dp"
                        android:src="@drawable/ic_baseline_arrow_back_white_24px"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Toolbar Title"
                        android:layout_gravity="center"
                        android:id="@+id/toolbar_title"
                        android:textColor="#ffffff"
                        android:textSize="20sp"/>
            </android.support.v7.widget.Toolbar>
            <ImageView
                    android:id="@+id/mainImg"
                    android:src="@drawable/login"
                    android:layout_width="wrap_content" android:layout_height="134dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/textviewlyaout"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/mainImg">
                <TextView
                        android:id="@+id/textview1"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/loginTv1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        tools:layout_editor_absoluteY="272dp" tools:layout_editor_absoluteX="0dp"/>
                <TextView
                        android:id="@+id/textview2"
                        android:gravity="center"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/loginTv2"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        tools:layout_editor_absoluteY="307dp" tools:layout_editor_absoluteX="0dp"/>
            </LinearLayout>
            <LinearLayout

                    android:orientation="vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/etlayout" app:layout_constraintEnd_toEndOf="parent"
                    android:padding="5dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/textviewlyaout"
            >
                <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <ImageView
                            android:layout_centerVertical="true"
                            android:id="@+id/imageview"
                            android:scaleType="centerCrop"
                            android:layout_width="20dp" android:layout_height="20dp"/>
                    <EditText
                            android:layout_toRightOf="@+id/imageview"
                            android:layout_centerVertical="true"
                            android:id="@+id/et1"
                            android:layout_marginLeft="10dp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/id"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:background="@android:color/transparent"/>
                    <View android:layout_width="match_parent" android:layout_height="1dp"
                          android:layout_below="@id/et1"
                          android:paddingEnd="10dp"
                          android:background="#000000"
                          android:paddingStart="10dp"/>
                </RelativeLayout>
                <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <EditText
                            android:inputType="textPassword"
                            android:drawableLeft="@drawable/password_icon"
                            android:id="@+id/et2"
                            android:layout_marginTop="5dp"
                            android:hint="@string/password"
                            android:drawablePadding="15dp"
                            android:background="@android:color/transparent"
                            android:layout_width="match_parent" android:layout_height="wrap_content"/>
                    <View android:layout_width="match_parent" android:layout_height="1dp"
                          android:layout_below="@id/et2"
                          android:paddingEnd="10dp"
                          android:background="#000000"
                          android:paddingStart="10dp"/>
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout
                    android:id="@+id/term"
                    android:visibility="@{main.agree ?View.INVISIBLE : View.VISIBLE}"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"

                    app:layout_constraintTop_toBottomOf="@+id/etlayout">
                <TextView
                        android:textStyle="bold"
                        android:id="@+id/termTv"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:layout_marginStart="10dp"
                />
                <ImageButton
                        android:id="@+id/termCheck"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="clip_vertical"
                        android:background="@{main.agree ? @drawable/checked_normal : @drawable/unchecked_normal}"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                />
            </RelativeLayout>

            <Button android:id="@+id/login"
                    android:text="@string/buttonLogin"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottom"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:enabled="false"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:clickable="@{main.agree ?true: false}"
                    android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/term"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="79dp"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:id="@+id/linearLayoutBottom" app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
                          app:layout_constraintBottom_toBottomOf="parent"
                          android:layout_marginBottom="8dp"
            >
                <TextView
                        android:id="@+id/idfind"
                        android:gravity="center"
                        android:text="@string/BottomTv1"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView
                        android:layout_marginBottom="20dp"
                        android:visibility="@{main.agree ?View.VISIBLE : View.GONE}"
                        android:id="@+id/autologin"
                        android:text="@string/BottomTv2"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>